Day 11 minor fixes